--- a/pc.html
+++ b/pc.html
@@ -50,7 +50,7 @@ svg {
 <body>
 <svg class="chart"></svg>
 <script src="//d3js.org/d3.v3.min.js"></script>
-<script src = "https://github.com/jacobole/DS330Project/blob/main/pc.js">  </script>
+<script src = "pc.js">  </script>
 
 <!-- html for the dropdown menus -->
 <br>
